# txt-pro-wai

./: .gitignore  AGENTS.md  IMPROVEMENTS.md  README.md  book_scan_translator.py  image_clean.py  main.py  py_tesst.py  pyproject.toml  requirements.txt  rotate.py  save_test.py  subs_test.py  subtitle_fixer.py  subtitle_translator.py  translator.py  upscaler.py
.github/: copilot-instructions.md
src_subs/: HDMs3e1.srt  Ip Man Zero.srt  Ipman_Zero.srt  ip_man_test.srt  just_a_farmer.txt  test.srt  test2.srt  test3.srt
